Fix Toolbar Alignment

--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -85,6 +85,8 @@
 	display:none;
 }
 .middle-button {
+	top:-2em;
+	position:relative;
 	margin-top:30px;
 	margin-left:30px;
 	display:inline-block;
